[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Tiles/PlayerButBetter.png" type="Texture" id=1]
[ext_resource path="res://Objects/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Objects/Controllers/CharacterController.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sounds/Step.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/Step1.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/Step2.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/Death.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/NoMove.wav" type="AudioStream" id=8]

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CharacterController" parent="." instance=ExtResource( 3 )]

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AccelerationTimer" type="Timer" parent="."]
one_shot = true

[node name="Steps" type="Node" parent="."]

[node name="Step1" type="AudioStreamPlayer" parent="Steps"]
stream = ExtResource( 4 )

[node name="Step2" type="AudioStreamPlayer" parent="Steps"]
stream = ExtResource( 5 )

[node name="Step3" type="AudioStreamPlayer" parent="Steps"]
stream = ExtResource( 6 )

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="NoMove" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="AccelerationTimer" to="." method="_on_AccelerationTimer_timeout"]
